Fix page alignment

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -82,7 +82,7 @@ body {
   margin-left: 15%;
   color: #333;
   font-size: 15px;
-  margin-bottom: 36px;
+  // margin-bottom: 36px;
 }
 
 .container .details h3 {
